				iterate over them.  Disable/Enabling this feature is controlled via EmpireOptions.
	* MODIFIED: All contains to contains, and persistence operations (merge/persist/remove) in EntityManager have been
				compacted; the amount of calls to the DataSource has been greatly reduced resulting in a large performance
				increase when cascading persistence operations, and a modest increase overall.
	* ADDED: TripleSource interface for allowing triple-level access to a DataSource
	* ADDED: Ask & Describe query methods introduced to DataSource interface.  Best effort implementations provided for DataSources which do not implement these natively.
	* ADDED: Query type specific methods to RdfQuery to allow direct access to the query results from the DataSource
	* ADDED: Default logging configuration
	* ADDED: Flag to RdfProperty annotation to control how java.net.URI objects are marshalled into RDF.
	* ADDED: Flag in EmpireOptions to disable the enforcement of @Entity annotations on classes
	* ADDED: TDB support
	* ADDED: Added support to automatically "infer" RdfProperty annotations when they are not present.  When flag in EmpireOptions is enabled, RdfGenerator
			 will try to map all fields of a bean, regardless of whether or not RdfProperty annotation is present or not.  Transient annotations can
			 'hide' these fields from being mapped.  This is more inline with how normal JPA implementations work. (issue #19)
	* FIXED: Several issues with the SPARQL endpoint data source implementation
	* FIXED: Bug in InstanceGenerator where the class/interface hierarchy was not being used to generate the bytecode resulting in AbstractMethodError's (issue #38)
	* REMOVED: Global flag in EmpireOptions for handling proxying, this is now completely controlled via JPA annotations

Empire 0.6.6 (2010-07-08)
=========================
    * MODIFIED: Updates in 4Store & OpenRDF utility libraries to resolve issue regarding escaping quotes in queries.