@@ -10,6 +10,7 @@ Empire 0.7 (TBD)
 	* MODIFIED: All contains to contains, and persistence operations (merge/persist/remove) in EntityManager have been
 				compacted; the amount of calls to the DataSource has been greatly reduced resulting in a large performance
 				increase when cascading persistence operations, and a modest increase overall.
+	* MODIFIED: Global config passed through to EntityManagers in the unit config so parameters do not have to be duplicated.
 	* ADDED: TripleSource interface for allowing triple-level access to a DataSource
 	* ADDED: Ask & Describe query methods introduced to DataSource interface.  Best effort implementations provided for DataSources which do not implement these natively.
 	* ADDED: Query type specific methods to RdfQuery to allow direct access to the query results from the DataSource
